[package]
name = "waterfall"
version = "0.1.0"
authors = ["Michael Mueller <mich@elmueller.net>"]
edition = "2018"

[dependencies]
futures-core = "0.3.0"
futures-util = "0.3.0"
tokio = { version = "1", features = [ "full" ] }
webdriver = { version = "0.43.0", default-features = false }
fantoccini = { version = "0.17.3" }
serde = "1.0"
serde_json = "1.0"
regex = "1.4"
log = "0.4"
psutil = "3.2.1"
portpicker = { git = "https://github.com/awestlake87/portpicker-rs" }

lang_macro = { path = "./lang_macro"}

[features]
headless = []