[package]
name = "waterfall"
version = "0.1.0"
authors = ["Michael Mueller <mich@elmueller.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1.50"
futures-core = "0.3.0"
futures-util = "0.3.0"
tokio = { version = "1", features = [ "full" ] }
webdriver = { version = "0.43.0", default-features = false }
fantoccini = { version = "0.17.3" }
serde = "1.0"
serde_json = "1.0"
regex = "1.4"
log = "0.4"
env_logger = "0.8"
psutil = "3.2.1"
which = "4.1.0"
portpicker = "0.1.1"

lang_macro = { path = "./lang_macro"}

[features]
default = ["canvas-ui"]
headless = []
canvas-ui = []
polkadot-js-ui = []
