[package]
name = "waterfall"
version = "0.1.0"
authors = ["Michael Mueller <mich@elmueller.net>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
async-trait = "0.1.50"
convert_case = "0.4.0"
futures-core = "0.3.15"
futures-util = "0.3.15"
tokio = { version = "1.7.1", features = [ "full" ] }
webdriver = { version = "0.43.1", default-features = false }
fantoccini = "0.17.7"
serde = "1.0"
serde_json = "1.0"
rand = "0.8.4"
regex = "1.4"
log = "0.4"
env_logger = "0.8"
psutil = "3.2.1"
which = "4.1.0"
portpicker = "0.1.1"
lazy_static = "1.4.0"

lang_macro = { path = "./lang_macro"}

[features]
headless = []
polkadot-js-ui = []
