[package]
name = "seal_ecdsa"
version = "3.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink_primitives = { path = "../ink/crates/primitives", default-features = false }
ink_metadata = { path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { path = "../ink/crates/env", default-features = false }
ink_storage = { path = "../ink/crates/storage", default-features = false }
ink_lang = { path = "../ink/crates/lang", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "seal_ecdsa"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[workspace]
